[fix] overflow

--- a/src/views/Details/_details.scss
+++ b/src/views/Details/_details.scss
@@ -137,7 +137,7 @@
 
         &--flex2 {
             @include flexAlign(flex-end);
-            overflow-x: auto;
+            overflow: auto hidden;
             height: 100%;
             margin: 0 auto;
 
